--- a/content/ui-automator/src/main/res/layout/bigbrother_fragment_ui_automator.xml
+++ b/content/ui-automator/src/main/res/layout/bigbrother_fragment_ui_automator.xml
@@ -14,4 +14,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/automator_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/automator_toggle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
