feat: Implement deeplink management with DAO, ViewModel, and UI components

--- a/content/database/src/main/res/layout/bigbrother_activity_table_inspector.xml
+++ b/content/database/src/main/res/layout/bigbrother_activity_table_inspector.xml
@@ -25,7 +25,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/table_inspector_sql_layout"
-                style="@style/input_outlined"
+                style="@style/BigBrotherInputOutlined"
                 app:endIconCheckable="true"
                 app:endIconDrawable="@drawable/bigbrother_ic_search"
                 android:layout_width="match_parent"
