--- a/content/database/src/main/res/layout/bigbrother_dialog_edit_string.xml
+++ b/content/database/src/main/res/layout/bigbrother_dialog_edit_string.xml
@@ -6,7 +6,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_string_layout"
-        style="@style/input_outlined"
+        style="@style/BigBrotherInputOutlined"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
