--- a/content/network/src/main/res/layout/bigbrother_activity_json_viewer.xml
+++ b/content/network/src/main/res/layout/bigbrother_activity_json_viewer.xml
@@ -17,7 +17,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@id/searchable_view_layout"
-        style="@style/SearchView"
+        style="@style/BigBrotherSearchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingHorizontal="10dp"
