--- a/content/common/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/common/src/main/res/values-pt/bigbrother_strings.xml
@@ -11,4 +11,5 @@
     <string name="save">Salvar</string>
     <string name="cancel">Cancelar</string>
     <string name="add">Adicionar</string>
+    <string name="copy">Copiar</string>
 </resources>
