--- a/content/common/src/main/res/values/bigbrother_strings.xml
+++ b/content/common/src/main/res/values/bigbrother_strings.xml
@@ -12,5 +12,6 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
+    <string name="copy">Copy</string>
     <string name="ok" translatable="false">Ok</string>
 </resources>
