--- a/content/common/src/main/res/values/bigbrother_styles.xml
+++ b/content/common/src/main/res/values/bigbrother_styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <public />
-    <style name="Theme.BigBrother" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="BigBrotherTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bb_brand_default</item>
         <item name="colorPrimaryVariant">@color/bb_brand_secondary</item>
@@ -23,7 +23,7 @@
         <item name="fontFamily">@font/lato</item>
         <item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
 
-        <item name="alertDialogTheme">@style/AlertBigBrother</item>
+        <item name="alertDialogTheme">@style/BigBrotherAlert</item>
     </style>
 
     <style name="BigBrotherButton" parent="Widget.AppCompat.Button">
@@ -36,7 +36,7 @@
         <item name="android:textColor">@color/bb_text_title_inverse</item>
     </style>
 
-    <style name="SearchView" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+    <style name="BigBrotherSearchView" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
         <item name="boxBackgroundColor">#33000000</item>
         <item name="endIconCheckable">true</item>
         <item name="endIconDrawable">@drawable/bigbrother_ic_search</item>
@@ -44,36 +44,36 @@
         <item name="endIconTint">?colorPrimary</item>
     </style>
 
-    <style name="input_outlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="BigBrotherInputOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxBackgroundColor">#33000000</item>
         <item name="endIconMode">custom</item>
         <item name="endIconTint">?colorPrimary</item>
     </style>
 
-    <style name="spinner_outlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+    <style name="BigBrotherSpinnerOutlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <item name="boxBackgroundColor">#33000000</item>
-        <item name="materialThemeOverlay">@style/Theme.MyApp.Spinner.ThemeOverlay</item>
+        <item name="materialThemeOverlay">@style/BigBrotherThemeOverlay</item>
     </style>
 
-    <style name="Theme.MyApp.Spinner.ThemeOverlay" parent="">
-        <item name="autoCompleteTextViewStyle">@style/Widget.MyApp.Spinner.ThemeOverlay.AutoCompleteTextView</item>
+    <style name="BigBrotherThemeOverlay" parent="">
+        <item name="autoCompleteTextViewStyle">@style/BigBrotherAutoCompleteTextView</item>
         <item name="colorSurface">@color/bb_background_secondary</item>
     </style>
 
-    <style name="Widget.MyApp.Spinner.ThemeOverlay.AutoCompleteTextView" parent="Widget.AppCompat.AutoCompleteTextView">
+    <style name="BigBrotherAutoCompleteTextView" parent="Widget.AppCompat.AutoCompleteTextView">
         <item name="android:background">@null</item>
         <item name="android:padding">16dp</item>
         <item name="android:textColor">@color/bb_text_title</item>
         <item name="android:textSize">@dimen/bb_text_m</item>
     </style>
 
-    <style name="TextAppearance_Tab">
+    <style name="BigBrotherTab">
         <item name="android:fontFamily">@font/courier_bold</item>
         <item name="android:textColor">@color/bb_text_title</item>
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="AlertBigBrother" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+    <style name="BigBrotherAlert" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:windowBackground">@drawable/bigbrother_alert_background</item>
         <item name="colorPrimary">@color/bb_brand_default</item>
         <item name="colorPrimaryVariant">@color/bb_brand_secondary</item>
