--- a/content/core/src/main/res/layout/bigbrother_content_layout.xml
+++ b/content/core/src/main/res/layout/bigbrother_content_layout.xml
@@ -15,7 +15,7 @@
         android:background="@android:color/transparent"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/bb_text_title"
-        app:tabTextAppearance="@style/TextAppearance_Tab"
+        app:tabTextAppearance="@style/BigBrotherTab"
         app:tabTextColor="@color/bb_text_title" />
 
     <androidx.viewpager2.widget.ViewPager2
