--- a/content/network/src/main/res/layout/bigbrother_fragment_network.xml
+++ b/content/network/src/main/res/layout/bigbrother_fragment_network.xml
@@ -19,7 +19,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/net_search_layout"
-                style="@style/SearchView"
+                style="@style/BigBrotherSearchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="50dp"
