--- a/content/proxy/src/main/res/layout/bigbrother_dialog_add_header.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_dialog_add_header.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/input_outlined"
+        style="@style/BigBrotherInputOutlined"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/bigbrother_proxy_add_action_name_hint">
@@ -23,7 +23,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/input_outlined"
+        style="@style/BigBrotherInputOutlined"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/bb_spacing_s"
