feat(ui-automator): Add scroll and back press recording
- Implements recording of scroll actions on scrollable views.
- Adds recording for back press events.
- Enhances ViewFinder interface with scroll-related properties and methods.
- Updates ComposableFinder_133 to support scroll and parent navigation.
- Modifies UiAutomatorView to handle scroll gestures and display a swipe icon.
- Adjusts UiAutomatorTooltipView to include a scroll action button.
- Updates UiAutomatorRecordModel to include BACK_PRESSED and SCROLL_Y actions.
- Refactors NetworkListActivity by removing @OutOfDomain annotation.

--- a/app/src/main/res/layout/network_activity.xml
+++ b/app/src/main/res/layout/network_activity.xml
@@ -111,7 +111,7 @@
         app:navigationIcon="@drawable/bigbrother_ic_arrow_back"
         app:title="@string/list_title" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/list_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -119,6 +119,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="asiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsauiasiudhsauh\nduhasiud husah\ndusahuidhsaui"/>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
