feat(ui-automator): Update styles and enhance scrolling functionality

--- a/app/src/main/res/layout/playground_activity.xml
+++ b/app/src/main/res/layout/playground_activity.xml
@@ -41,7 +41,7 @@
                 android:text="Disabled button" />
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/input_outlined"
+                style="@style/BigBrotherInputOutlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="TextInputLayout + TextInputEditText">
@@ -53,7 +53,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/spinner_outlined"
+                style="@style/BigBrotherSpinnerOutlined"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="TextInputLayout + AutoCompleteTextView">
