feat: Add Ktor client support and enhance UI
This commit introduces support for the Ktor HTTP client alongside the existing Retrofit/OkHttp implementation and improves the user interface.

- Adds new Ktor dependencies for core, OkHttp engine, content negotiation, Gson serialization, and logging.
- Implements a `GithubRepository` that abstracts network calls, allowing for selection between Retrofit and Ktor clients.
- Introduces a `RadioGroup` in the Network screen to let users switch between OkHttp/Retrofit and Ktor for making requests.
- Creates a `NetworkKtor` object to configure and provide a singleton `HttpClient` instance, which includes the BigBrother interceptor.
- Bumps the library version from 1.3.1 to 1.4.0.
- Applies `fitsSystemWindows="true"` or `Modifier.statusBarsPadding()` to various activity layouts and composables to prevent UI overlap with the status bar.
- Renames `NetworkConfig` to `NetworkRetrofit` for better clarity.
- Re-enables the `publisher` and `withJavadocJar` in the `publish.gradle` script.

--- a/app/src/main/res/layout/custom_page_activity.xml
+++ b/app/src/main/res/layout/custom_page_activity.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -77,8 +78,8 @@
             android:id="@+id/fun_body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="addPage(CustomPageActivity::class) {"
             android:layout_marginStart="@dimen/bb_spacing_s"
+            android:text="addPage(CustomPageActivity::class) {"
             android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
@@ -89,8 +90,8 @@
             android:id="@+id/fun_body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/custom_page_code_body"
             android:layout_marginStart="@dimen/bb_spacing_l"
+            android:text="@string/custom_page_code_body"
             android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
@@ -101,9 +102,9 @@
             android:id="@+id/fun_body3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ToolsFragment()"
-            android:paddingStart="@dimen/bb_spacing_s"
             android:layout_marginStart="@dimen/bb_spacing_l"
+            android:paddingStart="@dimen/bb_spacing_s"
+            android:text="ToolsFragment()"
             android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
@@ -114,8 +115,8 @@
             android:id="@+id/fun_body4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="}"
             android:layout_marginStart="@dimen/bb_spacing_l"
+            android:text="}"
             android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
@@ -126,8 +127,8 @@
             android:id="@+id/fun_body5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="}"
             android:layout_marginStart="@dimen/bb_spacing_s"
+            android:text="}"
             android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
